--- a/SitioWebCarrera/src/app/pages/egresados/egresados-pages.component.css
+++ b/SitioWebCarrera/src/app/pages/egresados/egresados-pages.component.css
@@ -25,7 +25,7 @@
   border-left: 6px solid #998a02d4;
   padding-left: 13px;
 }
-/* CARDS POR AÑO */
+/* CARDS POR Aï¿½fï¿½'O */
 .egresados-cards {
   display: flex;
   gap: 20px;
