--- a/SitioWebCarrera/src/app/pages/inicio/vinculacion/vinculacion.component.html
+++ b/SitioWebCarrera/src/app/pages/inicio/vinculacion/vinculacion.component.html
@@ -25,14 +25,14 @@
     </p>
   </div>
 
-  <!-- BOTÓN REGRESAR -->
+  <!-- BOTï¿½fï¿½"N REGRESAR -->
   <div style="text-align: center; margin-top: 50px;">
     <a
       [routerLink]="['/']"
       class="btn-secondary"
       style="text-decoration: none; display: inline-block; cursor: pointer;"
     >
-      ← Volver a Inicio
+      Volver a Inicio
     </a>
   </div>
 </section>
