--- a/SitioWebCarrera/src/app/pages/planEstudio/PlanEstudio-page.component.css
+++ b/SitioWebCarrera/src/app/pages/planEstudio/PlanEstudio-page.component.css
@@ -110,7 +110,7 @@
 }
 
 /* ===================================================== */
-/* ================= PESTAÑAS ========================== */
+/* ================= PESTAï¿½fï¿½'AS ========================== */
 /* ===================================================== */
 
 .plan-wrapper .tabs {
