--- a/SitioWebCarrera/src/app/pages/planEstudio/PlanEstudio-page.component.html
+++ b/SitioWebCarrera/src/app/pages/planEstudio/PlanEstudio-page.component.html
@@ -1,5 +1,5 @@
 
-<!-- ================= PLAN DE ESTUDIOS (SECCIÓN AISLADA) ================= -->
+<!-- ================= PLAN DE ESTUDIOS (SECCIï¿½fï¿½"N AISLADA) ================= -->
 <section class="plan-wrapper">
     <!-- ================= ENCABEZADO ================= -->
     <header class="header">
@@ -25,7 +25,7 @@
             <input type="radio" name="tabs" id="tabop">
 
 
-            <!-- ================= PESTAÑAS ================= -->
+            <!-- ================= PESTAï¿½fï¿½'AS ================= -->
             <div class="tabs">
                 <!-- Cada label activa un radio y muestra su contenido -->
                 <label
@@ -80,7 +80,7 @@
 
 
 </div>
-        <!-- ================= NIVELES DE FORMACIÓN ================= -->
+        <!-- ================= NIVELES DE FORMACIï¿½fï¿½"N ================= -->
         <section class="card">
             <h2>{{ levelsTitle() }}</h2>
 
@@ -99,7 +99,7 @@
             </div>
         </section>
 <br>
-        <!-- ================= DURACIÓN Y MODALIDAD ================= -->
+        <!-- ================= DURACIï¿½fï¿½"N Y MODALIDAD ================= -->
         <section class="double-card">
 
             <!-- Duración del programa -->
