--- a/SitioWebCarrera/src/app/pages/proyectos/proyectos-page.component.css
+++ b/SitioWebCarrera/src/app/pages/proyectos/proyectos-page.component.css
@@ -198,7 +198,7 @@ section.bg-light {
 }
 
 /* =====================================================
-   BOTÓN "VER MÁS"
+   BOTï¿½fï¿½"N "VER MÁS"
 ===================================================== */
 .btn-dark-custom {
   background-color: #85272d;
