--- a/SitioWebCarrera/src/app/pages/inicio/excelencia/excelencia.component.html
+++ b/SitioWebCarrera/src/app/pages/inicio/excelencia/excelencia.component.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="card card-red">
-            <h3>Cuerpo Académico de Élite</h3>
+            <h3>Cuerpo Académico de ï¿½fï¿½?lite</h3>
             <p>
                 Nuestros docentes son investigadores de tiempo completo con grados de posgrado,
                 miembros del SNI, asegurando que el conocimiento transmitido esté siempre a la
@@ -45,7 +45,7 @@
 
     <div style="text-align: center; margin-top: 50px;">
         <a [routerLink]="['/']" class="btn-secondary">
-            ← Volver a Inicio
+            Volver a Inicio
         </a>
     </div>
 </section>
