--- a/SitioWebCarrera/src/app/pages/quienesSomos/quienesSomos-page.component.css
+++ b/SitioWebCarrera/src/app/pages/quienesSomos/quienesSomos-page.component.css
@@ -17,9 +17,12 @@ body {
    HERO
 ========================= */
 .hero {
-  background-color: #9e2f2f;
+  background-color: #8a3838;
   padding: 80px 20px;
   margin-top: 80px;
+
+  border: 1.5px solid #e5d1d1;   /* 👈 BORDE como las tarjetas */
+  border-radius: 14px;
 }
 
 .hero-content {
@@ -72,10 +75,20 @@ body {
 
 .about-card {
   max-width: 1100px;
-  margin: auto;
-  background-color: #ffffff;
+  margin: 0 auto;
   padding: 50px;
+  background-color: #ffffff;
+
+  border-radius: 20px;   /* 🔴 ESQUINAS REDONDEADAS */
+  overflow: hidden;      /* 🔴 IMPORTANTE para que se respete la curva */
 }
+
+.about-card:hover {
+  border-color: #8b3a3a;
+  box-shadow: 0 12px 25px rgba(120, 50, 50, 0.15);
+  transform: translateY(-4px);
+}
+
 
 .about-card h2 {
   font-size: 26px;
