--- a/SitioWebCarrera/src/app/pages/inicio/excelencia/excelencia.component.html
+++ b/SitioWebCarrera/src/app/pages/inicio/excelencia/excelencia.component.html
@@ -1,4 +1,4 @@
-<section class="excelencia-header">
+﻿<section class="excelencia-header">
     <h1>Excelencia Académica: UNISTMO Ixtepec</h1>
     <p>Formando líderes en la Licenciatura en Informática con visión global.</p>
 </section>
@@ -25,7 +25,7 @@
         </div>
 
         <div class="card card-red">
-            <h3>Cuerpo Académico de ï¿½fï¿½?lite</h3>
+            <h3>Cuerpo Académico de Élite</h3>
             <p>
                 Nuestros docentes son investigadores de tiempo completo con grados de posgrado,
                 miembros del SNI, asegurando que el conocimiento transmitido esté siempre a la
